--- a/client/sources/css/style.styl
+++ b/client/sources/css/style.styl
@@ -7,6 +7,8 @@
   flex 1
 
   {fix-flexbox-grow-on-mobiles}
+  @media screen and (max-width: 850px)
+    display block !important
 
 .hide
   display none !important
